// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cookie parse 1`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "delPer": "0",
  },
}
`;

exports[`Cookie parse 2`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "delPer": "0",
    "name": "beven",
  },
}
`;

exports[`Cookie parse 3`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "aaa": null,
    "delPer": "0",
    "name": "beven",
  },
}
`;

exports[`Cookie parse 4`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "aaa": null,
    "delPer": "0",
    "name": "beven",
  },
}
`;

exports[`Cookie parse 5`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "aaa": null,
    "delPer": "0",
    "name": "beven",
    "type": "1",
  },
}
`;

exports[`Cookie parse 6`] = `
Cookie {
  "cookies": Object {
    "BAIDUID": "18CB9619E5482B2D1D7FEA5C25651A4D:FG",
    "BDORZ": "B490B5EBF6F3CD402E515D22BCDA1598",
    "BDSVRTM": "18",
    "BD_CK_SAM": "1",
    "BD_HOME": "1",
    "BD_UPN": "12314753",
    "BIDUPSID": "18CB9619E5482B2D0E9EC9A37D2CF93B",
    "COOKIE_SESSION": "132245_4_9_7_60_14_0_0_9_5_0_0_131430_0_3_0_1588776067_1587296668_1588776064%7C9%2392079_3_1587291523%7C2",
    "H_PS_PSSID": "1429_31125_21107_31589_30826_31463_31228_30823_31164",
    "PSINO": "1",
    "PSTM": "1586315620",
    "aaa": null,
    "delPer": "0",
    "name": "",
    "type": "1",
  },
}
`;
